# ChangeLog for net-fs/samba
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-fs/samba/ChangeLog,v 1.678 2014/08/01 23:30:20 polynomial-c Exp $

*samba-4.1.11 (01 Aug 2014)
*samba-4.0.21 (01 Aug 2014)

  01 Aug 2014; Lars Wendler <polynomial-c@gentoo.org> -samba-4.0.18.ebuild,
  +samba-4.0.21.ebuild, -samba-4.1.8.ebuild, +samba-4.1.11.ebuild:
  Security bump (bug #518766). Removed old.

  28 Jul 2014; Agostino Sarubbo <ago@gentoo.org> samba-3.6.23-r1.ebuild:
  Stable for ppc, wrt bug #512012

  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org> samba-3.6.23-r1.ebuild:
  Stable for x86, wrt bug #512012

  22 Jul 2014; Agostino Sarubbo <ago@gentoo.org> samba-3.6.23-r1.ebuild:
  Stable for amd64, wrt bug #512912

*samba-4.1.9 (11 Jul 2014)
*samba-4.0.19 (11 Jul 2014)
*samba-3.6.24 (11 Jul 2014)

  11 Jul 2014; Lars Wendler <polynomial-c@gentoo.org> -samba-3.6.22.ebuild,
  +samba-3.6.24.ebuild, -samba-4.0.17.ebuild, +samba-4.0.19.ebuild,
  -samba-4.1.7.ebuild, +samba-4.1.9.ebuild,
  +files/samba-4.0.19-automagic_aio_fix.patch:
  Version bump. Removed old. Fixed automagic dependency on libaio (bug
  #489764).

  18 Jun 2014; Michał Górny <mgorny@gentoo.org> samba-3.6.23-r1.ebuild:
  Update dependencies to require guaranteed EAPI=5 or multilib ebuilds, bug
  #513718.

*samba-3.6.23-r1 (11 Jun 2014)

  11 Jun 2014; Michał Górny <mgorny@gentoo.org> +samba-3.6.23-r1.ebuild:
  Enable multilib support in samba-3.

*samba-4.1.8 (04 Jun 2014)

  04 Jun 2014; Lars Wendler <polynomial-c@gentoo.org> -samba-4.1.6.ebuild,
  +samba-4.1.8.ebuild:
  Version bump. Removed old.

*samba-4.0.18 (28 May 2014)

  28 May 2014; Lars Wendler <polynomial-c@gentoo.org> -samba-4.0.16.ebuild,
  +samba-4.0.18.ebuild:
  Version bump. Removed old.

  14 May 2014; Agostino Sarubbo <ago@gentoo.org> samba-3.6.23.ebuild:
  Stable for sparc, wrt bug #504494

  17 Apr 2014; Jeroen Roovers <jer@gentoo.org> samba-4.1.7.ebuild:
  Marked ~hppa too.
