@@ -57,25 +57,25 @@ EBUILD samba-3.6.23.ebuild 12795 SHA256 99bd47dd825dcb1a663a1c29c3d3704a7b41e5ad
 EBUILD samba-3.6.24.ebuild 13533 SHA256 096993c4609c429fc0f3af79e8cbe194010ddbfe232ee8491cc2fd77ac1df072 SHA512 76b6d67d34f65ce8410d9729552e4f141b6f1911bdc6f064848092e7dfb3b8e997cce1e858ac525a08e7b52d8b7b3abce9de17a234cf1597b9bd3527ceaa323a WHIRLPOOL f09d9428cd68e5f823a80f2d2eb7094ffc0c590744fa175d1801e8126e113188a8386d13162c452d0db6091c02bf3b12cf20f119e36c7f61ce8341ddd926b9b7
 EBUILD samba-4.0.19.ebuild 4811 SHA256 ab9992a4259b17117e0a04aad439c98860a2e8c09a8fb7d6b04be493a721a4ff SHA512 a601587c7bfa1e4054ef5d245505afb21a73cbda9f7bd5f82f33c520f42daa532659530333e917695802036ea3fd6b89208636ebbbf3599db8339fd6b289c862 WHIRLPOOL 3ae61fa0cbe344984725ba94010a8119dc504af0373f6a5b8e5c17a3c3ba13590a6021f30786d125eecc39c24b49e601093acb9ceedf881c84093493d5390714
 EBUILD samba-4.0.21.ebuild 4811 SHA256 781cd9ae7c9351f637c356005b3a54b2bb50841d55cf90c62dbed697ef9c305c SHA512 80f226865ffc59243a892c4ecb251fa4fb1fdcccc88321488f4ac24a7db19739eb14542c59c82368c2c964f3cec4cdd23d365e538b2a044ef8ab83d3070d825e WHIRLPOOL b796a9e96274ef5db0fd559595e3bc8b79355d1bab396e018cdd56e5f6e77b8731b53903770e0ba9aca241998109ee52ddfb638bdd1848b2dd073814a9114936
-EBUILD samba-4.1.11.ebuild 4727 SHA256 e68668e4a7943a7bd0166cc8d20aaffda1a073f8cd1cb0b4196a32cb6ecea18a SHA512 19abf7340c270881b77877c290080a0ddd7339b7d3f85ac98e9edb3fccd5481238a46acd1706f4a39f50dd7fcf124a8c9096c01657c3e91cf24695b7182b22be WHIRLPOOL 7398a75e22c9095745738f31f55e5a8fd272bde0223f5819e2e4e932c07dd790dd3fa6e287dc652651b570659b66de9ea6d9efdef879f80d448a6516a51726e8
+EBUILD samba-4.1.11.ebuild 4727 SHA256 f5b358ef79c85d8879d3721858f06504bfce70cfd6aca97031ac0db23f33e165 SHA512 6664d8765fd5663d64787a0e5358ae97de48f901e8cac153565fab922850a03e7f51ff29c303dfc45238c0436f15793a93b360a91453a8be6d2a50bcca24ea37 WHIRLPOOL 4c5bb4651972ac0aa68ab21c81963895e733b030b3a732ace876a3af31653d7503db742dff9465d1527edfd0f720de6ee6ff6aae8ca539d8eefbdc35d04be4c8
 EBUILD samba-4.1.9.ebuild 4726 SHA256 09bbc25d05f601ee107de7197a79979608b43c368b4f224719068e55abec77a6 SHA512 1dcc1a0980f9607f2ae996958a3288fa7cfd7a747014e4c81011368ed81983051dfbab0c07f39649fbe943ecf097a25ac7b9110a9c39592341db72cd834f6418 WHIRLPOOL 02cb2e7afd76832d860b14cad78c89707a86d97bea4c8e3b5420cba284b28de8aaa98dc5a56f3e0c8065d807317268d3c07cbbb1579aad8b46cfc0ccb5053e61
-MISC ChangeLog 5395 SHA256 b72adabb0c51b355edee3a5922275edd21e5fa4e223ae1167db5cea8241f18bc SHA512 33888d3ff8b7a77fc6ac5368e28602e861463deb371ef6bde6444dc641f3b74a7738f2a940042f6b21dca8be2fb011f529b903b08b2105877985fd36ad33598f WHIRLPOOL 1794b6425abbe0c9ef89a7ef024d21da102d8a1e6ba87891b1bb7f0665582ec373e7963ad20e7f4a74c702826d997fdbb0fa8e6d290c385eeaf00aa937bcbc6c
+MISC ChangeLog 5498 SHA256 f904f6115e78b290434f7e28af5182ed468d41eb2d24d9284835746a723951c8 SHA512 a15fedbe35ca3d78470c4988cfdf9676e625e3c46fe3bd83afcd0dc6f1a7bef355825dece8eb3fed9366f9ef09e8cf71f16d39c8ba8aab25fefd7d92f500a733 WHIRLPOOL 7ce43068e41ea9b3c8393c6c7d9005226adb61e1ba2d21ac7f24891d2eeec944a9662b0084f3063c7026f2d8b6f23fd206051f3a8034ded4e7bffaea7701ad63
 MISC ChangeLog-2013 106689 SHA256 00ac832a137c7ce1d21be794b45339e1f4e9c51eb1b796cbcac90a03e1cf5453 SHA512 9dc4e4e22042db7f5ff3a474eb7a454044ea6958ffc3ba5c5de6f09608cfbbcaed8db00763a38995276de03a5f1c728fc783d4addaca7da16f4be76a4e49fd6f WHIRLPOOL 85a746ae34c0386ecb151f5f323b92615cce971b1e46f249cccfdc682bdddd7dad080dd4ffbe5748f093ee11db3f5182cae6d85191a37014639a56040eff9644
 MISC metadata.xml 1514 SHA256 c10deb71703017ec67f4e5bac297d9b4581fec3d8b5549b6aea2a43bda642bc0 SHA512 9e67e8f7e0c972046e32bf4539142559c24183d6c3469e5af2f901728a3c02a9fbfd50e948a9fd414107fd0cb2a8de709ffe3fc5bf3372c77a4a3db6dc622ecc WHIRLPOOL ec92ea6a1b03e70c791670e97e7d9e07e6bdb82c24ed08c186e786afcd009ab63fbee7d481a4cdc394632ad312e58a2048dae3ff333f6f7a1ad19add55e2c8f8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJT3CMPAAoJEPiazRVxLXTFQi0P/0l0Zt+OtaTQe8W9FSITWivD
-lPbZ7CpLPALOzosjNhavC6Xhi39niY9Hi5xk4xm3IF8z8dmlwNRn2Z8RRjZtKRZQ
-98xNuhZhcaGVk+4xd+SHcChuFclzGV5evHhEBycXAaFCOQVsgKg8kKEoelOTBSQn
-mno+WWnV4qIGmTDCAupzBPBB2Z5lo0Ja2MJpLaBQTPHAjcMTNahlGpzOxjXAUan2
-3m3neb+O3OnyLqH2++zk8GxcojrXA9Z5pRhhgGyNg2Utoh3BA06H43lQusxr1T5u
-X4GjxIMeeup0K+OOxYbsTPGfh2GbaLQ7fPPDNaJRBc1ghF4q9xv78RpNHQO7sUMH
-29jeNZX3ZMtB0AWgL+SY5CI9fUJ3NBfZ8T3SmJqmQb9wLCKqFCVLCLmlkJPqxtT1
-ogMaq+FawHDA+ZFd091OMN8GX77q9bWjStMVLM4V1Y1lHnkXB+aeDyL8FqnRSZXU
-53rsWOsWzoiM9JO8g+5YMXV9z/T/ngKn6itefVgu8GYWW3OkBCH79Ud6dmNcTVmJ
-+TDYz4UMiBwuvNJh6uZne+ZS0lw/CnfgnIBJI40vfgwD5XaSpWYciyV+Au97GKoO
-CYAaSg/2X8iK1mYOPc9jG2VwtjQ4pqfxCbpgTDxCVWiYIvjU43x/3opc57iX3CZD
-0pbnniscBSRRZ2OU6MtR
-=hqXW
+iQIcBAEBCAAGBQJT4gqtAAoJEPiazRVxLXTFW6cP/A0HVNBK/VdzWYkmwA8dYS5N
+FBd3Je52FmlyvNwi7duHrUCoz42+n/VTrgo2CQ4sO74Eca8H7vQJUN9buSA0fWW7
+YsrSeWuWGelIffvKwVgC2d7Bs/jmPSlMyRlMInWH36BVPFDnDemOByE4Porpdh7P
+Cf3i8UI8FMPtSf7vzNEMfZ1AIqQdPCNG78IAumD6yQ/bzuTeghdWWjKOIcq/laG3
+FwSNv8oH+NC1kaTtxXX9OE4m6VsltWczLHIBlw3iGDvyaHXDZVf2WNLACMIuEU6X
+Jz2JWUPHRqclP/1aE2pmyssAfjYPXzTnroGYoVwyn6Lj8QEB0atjvuF+jztA4WAd
+YF1urUSuxmMssLrd8uqOtnPWHURiJ/doNYPxaDcwCAATcRJgXm2Gq0eByHOtyix7
+8lZ+hNxhumml7SG96oDa8emvAAAlOzhMyq4ikr2tXUr3pKsny48MR4rEq7Sj1vqZ
+RSaLXzOW63QqmBvL5i+ngJS4Nb2p93in14t5BImDMu7epmkRq11ZD3F42R8NYBtY
+27EjfpGGwQTsfW0/vjAlE/cVLSy7a7s7VE1YdyT/PccyRpf+2QQMQqTQQj4g4XDu
+XCSfaWhh2+BlEqgtgnis1vQeqUvtZtbDPkIO8etG9GwA4r8zvqNy3dqriBRb0jd4
+Z1ohq57nNHjjBZpSoqoF
+=UAzh
 -----END PGP SIGNATURE-----
