@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/samba/samba-4.1.11.ebuild,v 1.1 2014/08/01 23:30:20 polynomial-c Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/samba/samba-4.1.11.ebuild,v 1.2 2014/08/06 10:59:56 polynomial-c Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python2_{6,7} )
@@ -35,7 +35,7 @@ CDEPEND="${PYTHON_DEPS}
 	sys-apps/attr
 	sys-libs/libcap
 	>=sys-libs/ntdb-1.0[python]
-	>=sys-libs/ldb-1.1.16
+	>=sys-libs/ldb-1.1.17
 	>=sys-libs/tdb-1.2.11[python]
 	>=sys-libs/talloc-2.0.8[python]
 	>=sys-libs/tevent-0.9.18
