@@ -1,6 +1,10 @@
 # ChangeLog for sec-policy/selinux-base-policy
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-base-policy/ChangeLog,v 1.146 2014/08/05 09:23:36 swift Exp $
+# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-base-policy/ChangeLog,v 1.147 2014/08/06 10:20:35 swift Exp $
+
+  06 Aug 2014; Sven Vermeulen <swift@gentoo.org>
+  selinux-base-policy-9999.ebuild:
+  Supporting the SELINUX_GIT_* variables
 
   05 Aug 2014; Sven Vermeulen <swift@gentoo.org>
   -selinux-base-policy-2.20130424-r1.ebuild,
