@@ -1,6 +1,9 @@
 # ChangeLog for sec-policy/selinux-base
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-base/ChangeLog,v 1.46 2014/08/05 09:23:36 swift Exp $
+# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-base/ChangeLog,v 1.47 2014/08/06 10:20:02 swift Exp $
+
+  06 Aug 2014; Sven Vermeulen <swift@gentoo.org> selinux-base-9999.ebuild:
+  Supporting the SELINUX_GIT_* variables
 
   05 Aug 2014; Sven Vermeulen <swift@gentoo.org>
   -selinux-base-2.20130424-r1.ebuild, -selinux-base-2.20130424-r2.ebuild,
